backends/drm: fix reallocation check

When no modifiers are used at all, we shouldn't check them.

BUG: 448557